--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +9,8 @@
     <link rel="stylesheet" href="../assets/estilo/produtos.css">
     <title>EcoMarket - Produtos</title>
 </head>
-
 <body>
+    <div id="feedback" class="feedback" aria-live="polite"></div>
     <header>
         <div class="logo-container">
             <h1>EcoMarket-SAMAVI</h1>
@@ -44,12 +43,9 @@
         <div class="produtos-grid" id="produtos-lista"></div>
     </main>
 
-    <div id="feedback"></div>
-
     <script type="module" src="../assets/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
-
 </html>
