--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -7,267 +7,292 @@
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <title>EcoMarket - Conta</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background: #f5f5f5;
-            color: #333;
-        }
+        @charset "UTF-8";
 
-        header {
-            background: linear-gradient(to right, #597729, #83c716);
-            color: white;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-        }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-        header img {
-            max-width: 10%;
-            height: auto;
-            margin-left: -90%;
-            margin-top: -4%;
-        }
+:root {
+  --verde-folha: #3A6351;
+  --verde-claro: #A8C686;
+  --marrom-terra: #7B5E42;
+  --bege-areia: #F2E8CF;
+  --branco-neve: #FFFFFF;
+  --cinza-pedra: #4F4F4F;
+}
 
-        .profile-pic {
-            color: white;
-            width: 150px;
-            height: 150px;
-            background: #eee;
-            border-radius: 50%;
-            margin: 10px auto 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 75px;
-            border: 3px solid white;
-        }
+body {
+    font-family: 'Poppins', sans-serif;
 
-        .content {
-            display: flex;
-            flex-flow: column nowrap;
-            background: white;
-            padding: 20px;
-            margin: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            text-align: left;
-        }
+  margin: 0;
+  background: var(--bege-areia);
+  color: var(--cinza-pedra);
+}
 
-        input {
-            border-radius: 5px;
-            padding: 4px;
-        }
+header {
+  background: linear-gradient(to right, var(--verde-folha), var(--verde-claro));
+  color: var(--branco-neve);
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  height: 160px;
+}
 
-        input[type=text] {
-            padding: 8px;
-            font-size: 15px;
-            width: 50%;
-            height: 10px;
-        }
+header img {
+  max-width: 10%;
+  height: auto;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
 
-        input[type=tel] {
-            font-size: .9em;
-        }
+header ul {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  list-style-type: none;
+  font-weight: bolder;
+}
 
-        input[type=email] {
-            width: 52%;
-        }
+header ul li {
+  color: var(--branco-neve);
+}
 
-        input[type=password] {
-            width: 51%;
-        }
+header a {
+  color: var(--branco-neve);
+  font-size: 30px;
+  padding: 5px;
+}
 
-        label {
-            font-size: 1.1em;
-            font-weight: bold;
-        }
+header a:hover {
+  background-color: var(--marrom-terra);
+  transition: 0.5s;
+  padding: 8px;
+  border-radius: 20px;
+}
 
-        #enviar {
-            background-color: #83c716e0;
-            border-radius: 10px;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
+.profile-pic {
+  color: var(--branco-neve);
+  width: 150px;
+  height: 150px;
+  background: #ddd;
+  border-radius: 50%;
+  margin: 10px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 75px;
+  border: 3px solid var(--branco-neve);
+}
 
-        #enviar:hover {
-            background-color: #689e12;
-        }
+.content {
+  display: flex;
+  flex-direction: column;
+  background: var(--branco-neve);
+  padding: 20px;
+  margin: 10px;
+  border: 2px solid var(--verde-folha);
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
 
-        #limpar {
-            background-color: rgb(216, 45, 45);
-            border-radius: 10px;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            font-weight: bold;
-            margin-left: 4px;
-            transition: background-color 0.3s;
-        }
+input {
+  border-radius: 5px;
+  padding: 4px;
+  border: 1px solid var(--verde-claro);
+}
 
-        #limpar:hover {
-            background-color: rgb(180, 37, 37);
-        }
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+input[type="password"],
+input[type="date"] {
+  padding: 8px;
+  font-size: 15px;
+  width: 50%;
+}
 
+input[type="tel"] {
+  font-family: monospace;
+}
 
-        .item {
-            display: flex;
-            justify-content: space-between;
-            padding: 12px 0;
-            border-bottom: 1px solid #eee;
-        }
+label {
+  font-size: 1.1em;
+  font-weight: bold;
+}
 
-        .item:last-child {
-            border-bottom: none;
-        }
+#botoes-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
 
-        .item span {
-            color: #666;
-        }
+#enviar {
+  background-color: var(--verde-claro);
+  color: var(--cinza-pedra);
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
 
-        .verify {
-            color: green;
-            font-weight: bold;
-        }
+#enviar:hover {
+  background-color: var(--verde-folha);
+  color: var(--branco-neve);
+}
 
-        .verify-link {
-            color: #f4511e;
-            cursor: pointer;
-        }
+#limpar {
+  background-color: var(--marrom-terra);
+  color: var(--branco-neve);
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 4px;
+  transition: background-color 0.3s;
+}
 
-        /* Estilos do Quiz */
-        .educacao-ambiental {
-            background: white;
-            padding: 20px;
-            margin: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+#limpar:hover {
+  background-color: #5a422c;
+}
 
-        .quiz {
-            margin-top: 20px;
-        }
+.item {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 0;
+  border-bottom: 1px solid #ccc;
+}
 
-        #pergunta-quiz {
-            font-size: 1.2rem;
-            margin-bottom: 15px;
-            font-weight: bold;
-        }
+.item:last-child {
+  border-bottom: none;
+}
 
-        #opcoes-quiz {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
+.item span {
+  color: #666;
+}
 
-        #opcoes-quiz button {
-            padding: 12px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            background: white;
-            cursor: pointer;
-            transition: all 0.3s;
-            text-align: left;
-        }
+.verify {
+  color: var(--verde-folha);
+  font-weight: bold;
+}
 
-        #opcoes-quiz button:hover {
-            border-color: #83c716;
-            background-color: rgba(131, 199, 22, 0.1);
-        }
+.verify-link {
+  color: #bb5e00;
+  cursor: pointer;
+}
 
-        #opcoes-quiz button.correta {
-            border-color: #4CAF50;
-            background-color: rgba(76, 175, 80, 0.1);
-        }
+.educacao-ambiental {
+  background: var(--branco-neve);
+  padding: 20px;
+  margin: 10px;
+  border: 2px solid var(--verde-folha);
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
 
-        #opcoes-quiz button.incorreta {
-            border-color: #f44336;
-            background-color: rgba(244, 67, 54, 0.1);
-        }
+.quiz {
+  margin-top: 20px;
+}
 
-        #pontuacao {
-            font-weight: bold;
-            color: #597729;
-        }
+#pergunta-quiz {
+  font-size: 1.2rem;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
 
-        .feedback {
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            display: none;
-        }
+#opcoes-quiz {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  margin-bottom: 20px;
+}
 
-        .feedback.correta {
-            background-color: rgba(76, 175, 80, 0.1);
-            border-left: 4px solid #4CAF50;
-            display: block;
-        }
+#opcoes-quiz button {
+  padding: 12px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  background: var(--branco-neve);
+  cursor: pointer;
+  transition: all 0.3s;
+  text-align: left;
+}
 
-        .feedback.incorreta {
-            background-color: rgba(244, 67, 54, 0.1);
-            border-left: 4px solid #f44336;
-            display: block;
-        }
+#opcoes-quiz button:hover {
+  border-color: var(--verde-claro);
+  background-color: rgba(168, 198, 134, 0.1);
+}
 
-        .conquistas {
-            margin-top: 30px;
-        }
+#opcoes-quiz button.correta {
+  border-color: #4CAF50;
+  background-color: rgba(76, 175, 80, 0.1);
+}
 
-        #badges {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 10px;
-        }
+#opcoes-quiz button.incorreta {
+  border-color: #f44336;
+  background-color: rgba(244, 67, 54, 0.1);
+}
 
-        .badge {
-            width: 60px;
-            height: 60px;
-            background: #f0f0f0;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px;
-        }
+#pontuacao {
+  font-weight: bold;
+  color: var(--verde-folha);
+}
 
-        .error-border {
-            border: 1px solid red !important;
-            animation: shake 0.5s;
-        }
+.feedback {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  display: none;
+}
 
-        @keyframes shake {
+.feedback.correta {
+  background-color: rgba(76, 175, 80, 0.1);
+  border-left: 4px solid #4CAF50;
+  display: block;
+}
 
-            0%,
-            100% {
-                transform: translateX(0);
-            }
+.feedback.incorreta {
+  background-color: rgba(244, 67, 54, 0.1);
+  border-left: 4px solid #f44336;
+  display: block;
+}
 
-            25% {
-                transform: translateX(-5px);
-            }
+.conquistas {
+  margin-top: 30px;
+}
 
-            75% {
-                transform: translateX(5px);
-            }
-        }
+#badges {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+}
 
-        /* Responsividade */
-        @media (min-width: 600px) {
-            #opcoes-quiz {
-                grid-template-columns: 1fr 1fr;
-            }
+.badge {
+  width: 60px;
+  height: 60px;
+  background: var(--bege-areia);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
 
-            .content,
-            .educacao-ambiental {
-                max-width: 600px;
-                margin: 10px auto;
-            }
-        }
+@media (min-width: 600px) {
+  #opcoes-quiz {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .content,
+  .educacao-ambiental {
+    max-width: 600px;
+    margin: 10px auto;
+  }
+}
+
     </style>
 </head>
 
@@ -275,7 +300,7 @@
 
     <header>
         <h1>Perfil</h1>
-        <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
+        <img src="../assets/img/logo.png" alt="Logo EcoMarket">
     </header>
 
     <div class="profile-pic"><ion-icon name="person-outline"></ion-icon></div>
