barra de pesquisa

--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -13,7 +13,7 @@
     <div id="feedback" class="feedback" aria-live="polite"></div>
     <header>
         <div class="logo-container">
-            <h1>EcoMarket-SAMAVI</h1>
+            <h1>EcoMarket SAMAVI</h1>
             <img src="../assets/img/logo.png" alt="Logo EcoMarket">
         </div>
 
@@ -40,6 +40,9 @@
     </header>
     <main class="produtos-page">
         <h1 id="subtitulo">Todos os Produtos</h1>
+        <div class="barra-pesquisa">
+            <input type="text" id="input-pesquisa" placeholder="Buscar produtos..." aria-label="Buscar produtos">
+        </div>
         <div class="produtos-grid" id="produtos-lista"></div>
     </main>
 
