--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="../assets/estilo/addprod.css"/>
-  <title>EcoMarket - Adicionar Produtos</title>
+  <title>Adicionar Produtos</title>
 </head>
 <body>
   <div class="container">
