--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-  <title>Contatos</title>
+  <title>EcoMarket - Contatos</title>
   <style>
     :root {
       --verde-folha: #3A6351;
