--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -299,7 +299,7 @@ label {
 <body>
 
     <header>
-        <h1>Perfil</h1>
+        <h1>Cadastro</h1>
         <img src="../assets/img/logo.png" alt="Logo EcoMarket">
     </header>
 
