ajustes de usuário logado

--- a/paginas/editar-produto.html
+++ b/paginas/editar-produto.html
@@ -60,7 +60,7 @@
     const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
 
     if (!usuarioLogado) {
-      window.location.href = '/login.html';
+      window.location.href = '/index.html';
     }
 
     document.addEventListener('DOMContentLoaded', async () => {
