--- a/paginas/home.html
+++ b/paginas/home.html
@@ -17,7 +17,7 @@
 
         if (!usuario || !usuario.email) { // Verifica tanto a existência quanto dados válidos
         localStorage.removeItem('usuarioLogado'); // Limpa dados corrompidos
-        window.location.href = '/login.html?redirect=' + encodeURIComponent(window.location.pathname);
+        window.location.href = '/index.html?redirect=' + encodeURIComponent(window.location.pathname);
 }
 </script>
     <!-- CABEÇALHO -->
